<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BuildActivity"
    tools:showIn="@layout/activity_build">

    <TextView
        android:id="@+id/lblStepOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/step_one_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <Button
        android:id="@+id/btnStepOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_above="@+id/lblStepTwo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center|fill"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="-150dp"
        android:text="@string/step_one" />

    <TextView
        android:id="@+id/lblStepTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="160dp"
        android:gravity="center_horizontal"
        android:text="@string/step_two_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <Button
        android:id="@+id/btnStepTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_above="@+id/lblStepThree"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center|fill"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="-330dp"
        android:text="@string/step_two" />

    <TextView
        android:id="@+id/lblStepThree"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="340dp"
        android:gravity="center_horizontal"
        android:text="@string/step_three_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="205dp" />

    <Button
        android:id="@+id/btnStepThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|fill"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/step_three" />



</RelativeLayout>